unpackaged/main/default/objects/ETT_Estimate_Quotation__c/ETT_Estimate_Quotation__c.object-meta.xml
<CustomObject>
    <label>Estimation&#39;s</label>
    <nameField>
        <displayFormat>QN-{00000}</displayFormat>
        <label>Estimate Quotation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Estimation&#39;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>