unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Accept_Quotation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Accept_Quotation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accept Quotation</label>
    <type>Checkbox</type>
</CustomField>