unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Account__c.field-meta.xml
<CustomField>
    <fullName>ETT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Estimation&#39;s</relationshipLabel>
    <relationshipName>Estimate_Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>