unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Collection_Card__c.field-meta.xml
<CustomField>
    <fullName>ETT_Collection_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collection Card</label>
    <referenceTo>ETT_Collection_Card__c</referenceTo>
    <relationshipLabel>Estimation&#39;s</relationshipLabel>
    <relationshipName>Estimation_s</relationshipName>
    <type>Lookup</type>
</CustomField>