unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Contact__c.field-meta.xml
<CustomField>
    <fullName>ETT_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.ETT_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Estimation&#39;s</relationshipLabel>
    <relationshipName>Estimate_Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>