unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>ETT_Country_of_Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country of Origin</label>
    <referenceTo>ETT_Country_Master__c</referenceTo>
    <relationshipName>Estimate_Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>