unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Email__c.field-meta.xml
<CustomField>
    <fullName>ETT_Email__c</fullName>
    <formula>ETT_Collection_Card__r.ETT_Accounts__r.ETT_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>