unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Fax__c.field-meta.xml
<CustomField>
    <fullName>ETT_Fax__c</fullName>
    <formula>ETT_Collection_Card__r.ETT_Accounts__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fax</label>
    <type>Text</type>
</CustomField>