unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Max_Range__c.field-meta.xml
<CustomField>
    <fullName>ETT_Max_Range__c</fullName>
    <label>Max Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>