unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Pattern__c.field-meta.xml
<CustomField>
    <fullName>ETT_Pattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pattern</label>
    <referenceTo>ETT_Pattern_Master__c</referenceTo>
    <relationshipName>Estimate_Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>