unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Purchased_Agreed_Price__c.field-meta.xml
<CustomField>
    <fullName>ETT_Purchased_Agreed_Price__c</fullName>
    <label>Purchased Agreed Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>