unpackaged/main/default/objects/ETT_Estimate_Quotation__c/fields/ETT_Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>ETT_Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipName>Estimate_Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>