unpackaged/main/default/objects/ETT_Estimate_Quotation__c/validationRules/ETT_Purchase_Price_Ranges.validationRule-meta.xml
<ValidationRule>
    <fullName>ETT_Purchase_Price_Ranges</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNULL( ETT_Min_Range__c )) &amp;&amp; not(ISNULL( ETT_Max_Range__c )) 
&amp;&amp; not(ISNULL( ETT_Price__c )) &amp;&amp; ETT_Min_Range__c!=0 
&amp;&amp; ETT_Price__c!=0 &amp;&amp; ETT_Max_Range__c!=0 &amp;&amp; 
(ETT_Price__c&gt;ETT_Max_Range__c)</errorConditionFormula>
    <errorMessage>Price should be between the min and max range</errorMessage>
</ValidationRule>