unpackaged/main/default/objects/ETT_Estimate_Quotation__c/listViews/All_Tyre.listView-meta.xml
<ListView>
    <fullName>All_Tyre</fullName>
    <columns>NAME</columns>
    <columns>ETT_Collection_Card__c</columns>
    <columns>ETT_Tyre_Inspection_Card__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Tyre</label>
</ListView>